--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "TokenOptions": {
-    "Audience": "www.aredapanel.com",
-    "Issuer": "www.aredapanel.com",
+    "Audience": "",
+    "Issuer": "",
     "AccessTokenExpiration": 10,
     "SecurityKey": "mysecretkeymysecretkey"
   },
